shared/newton_dynamics/newton.odin


    @(link_name="NewtonMeshApproximateConvexDecomposition")
    NewtonMeshApproximateConvexDecomposition :: proc(mesh : ^NewtonMesh, maxConcavity : dFloat, backFaceDistanceFactor : dFloat, maxCount : i32, maxVertexPerHull : i32, reportProgressCallback : NewtonReportProgress, reportProgressUserData : rawptr) -> ^NewtonMesh ---

    @(link_name="NewtonRemoveUnusedVertices")
    NewtonRemoveUnusedVertices :: proc(mesh : ^NewtonMesh, vertexRemapTable : ^i32) ---

    @(link_name="NewtonMeshBeginBuild")
    NewtonMeshBeginBuild :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshBeginFace")
    NewtonMeshBeginFace :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshAddPoint")
    NewtonMeshAddPoint :: proc(mesh : ^NewtonMesh, x : f64, y : f64, z : f64) ---

    @(link_name="NewtonMeshAddLayer")
    NewtonMeshAddLayer :: proc(mesh : ^NewtonMesh, layerIndex : i32) ---

    @(link_name="NewtonMeshAddMaterial")
    NewtonMeshAddMaterial :: proc(mesh : ^NewtonMesh, materialIndex : i32) ---

    @(link_name="NewtonMeshAddNormal")
    NewtonMeshAddNormal :: proc(mesh : ^NewtonMesh, x : dFloat, y : dFloat, z : dFloat) ---

    @(link_name="NewtonMeshAddBinormal")
    NewtonMeshAddBinormal :: proc(mesh : ^NewtonMesh, x : dFloat, y : dFloat, z : dFloat) ---

    @(link_name="NewtonMeshAddUV0")
    NewtonMeshAddUV0 :: proc(mesh : ^NewtonMesh, u : dFloat, v : dFloat) ---

    @(link_name="NewtonMeshAddUV1")
    NewtonMeshAddUV1 :: proc(mesh : ^NewtonMesh, u : dFloat, v : dFloat) ---

    @(link_name="NewtonMeshAddVertexColor")
    NewtonMeshAddVertexColor :: proc(mesh : ^NewtonMesh, r : f32, g : f32, b : f32, a : f32) ---

    @(link_name="NewtonMeshEndFace")
    NewtonMeshEndFace :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshEndBuild")
    NewtonMeshEndBuild :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshClearVertexFormat")
    NewtonMeshClearVertexFormat :: proc(format : ^NewtonMeshVertexFormat) ---

    @(link_name="NewtonMeshBuildFromVertexListIndexList")
    NewtonMeshBuildFromVertexListIndexList :: proc(mesh : ^NewtonMesh, format : ^NewtonMeshVertexFormat) ---

    @(link_name="NewtonMeshGetPointCount")
    NewtonMeshGetPointCount :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshGetIndexToVertexMap")
    NewtonMeshGetIndexToVertexMap :: proc(mesh : ^NewtonMesh) -> ^i32 ---

    @(link_name="NewtonMeshGetVertexDoubleChannel")
    NewtonMeshGetVertexDoubleChannel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^f64) ---

    @(link_name="NewtonMeshGetVertexChannel")
    NewtonMeshGetVertexChannel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshGetNormalChannel")
    NewtonMeshGetNormalChannel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshGetBinormalChannel")
    NewtonMeshGetBinormalChannel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshGetUV0Channel")
    NewtonMeshGetUV0Channel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshGetUV1Channel")
    NewtonMeshGetUV1Channel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshGetVertexColorChannel")
    NewtonMeshGetVertexColorChannel :: proc(mesh : ^NewtonMesh, vertexStrideInByte : i32, outBuffer : ^dFloat) ---

    @(link_name="NewtonMeshHasNormalChannel")
    NewtonMeshHasNormalChannel :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshHasBinormalChannel")
    NewtonMeshHasBinormalChannel :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshHasUV0Channel")
    NewtonMeshHasUV0Channel :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshHasUV1Channel")
    NewtonMeshHasUV1Channel :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshHasVertexColorChannel")
    NewtonMeshHasVertexColorChannel :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshBeginHandle")
    NewtonMeshBeginHandle :: proc(mesh : ^NewtonMesh) -> rawptr ---

    @(link_name="NewtonMeshEndHandle")
    NewtonMeshEndHandle :: proc(mesh : ^NewtonMesh, handle : rawptr) ---

    @(link_name="NewtonMeshFirstMaterial")
    NewtonMeshFirstMaterial :: proc(mesh : ^NewtonMesh, handle : rawptr) -> i32 ---

    @(link_name="NewtonMeshNextMaterial")
    NewtonMeshNextMaterial :: proc(mesh : ^NewtonMesh, handle : rawptr, materialId : i32) -> i32 ---

    @(link_name="NewtonMeshMaterialGetMaterial")
    NewtonMeshMaterialGetMaterial :: proc(mesh : ^NewtonMesh, handle : rawptr, materialId : i32) -> i32 ---

    @(link_name="NewtonMeshMaterialGetIndexCount")
    NewtonMeshMaterialGetIndexCount :: proc(mesh : ^NewtonMesh, handle : rawptr, materialId : i32) -> i32 ---

    @(link_name="NewtonMeshMaterialGetIndexStream")
    NewtonMeshMaterialGetIndexStream :: proc(mesh : ^NewtonMesh, handle : rawptr, materialId : i32, index : ^i32) ---

    @(link_name="NewtonMeshMaterialGetIndexStreamShort")
    NewtonMeshMaterialGetIndexStreamShort :: proc(mesh : ^NewtonMesh, handle : rawptr, materialId : i32, index : ^i16) ---

    @(link_name="NewtonMeshCreateFirstSingleSegment")
    NewtonMeshCreateFirstSingleSegment :: proc(mesh : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateNextSingleSegment")
    NewtonMeshCreateNextSingleSegment :: proc(mesh : ^NewtonMesh, segment : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateFirstLayer")
    NewtonMeshCreateFirstLayer :: proc(mesh : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateNextLayer")
    NewtonMeshCreateNextLayer :: proc(mesh : ^NewtonMesh, segment : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshGetTotalFaceCount")
    NewtonMeshGetTotalFaceCount :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshGetTotalIndexCount")
    NewtonMeshGetTotalIndexCount :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshGetFaces")
    NewtonMeshGetFaces :: proc(mesh : ^NewtonMesh, faceIndexCount : ^i32, faceMaterial : ^i32, faceIndices : ^rawptr) ---

    @(link_name="NewtonMeshGetVertexCount")
    NewtonMeshGetVertexCount :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshGetVertexStrideInByte")
    NewtonMeshGetVertexStrideInByte :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshGetVertexArray")
    NewtonMeshGetVertexArray :: proc(mesh : ^NewtonMesh) -> ^f64 ---

    @(link_name="NewtonMeshGetVertexBaseCount")
    NewtonMeshGetVertexBaseCount :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshSetVertexBaseCount")
    NewtonMeshSetVertexBaseCount :: proc(mesh : ^NewtonMesh, baseCount : i32) ---

    @(link_name="NewtonMeshGetFirstVertex")
    NewtonMeshGetFirstVertex :: proc(mesh : ^NewtonMesh) -> rawptr ---

    @(link_name="NewtonMeshGetNextVertex")
    NewtonMeshGetNextVertex :: proc(mesh : ^NewtonMesh, vertex : rawptr) -> rawptr ---

    @(link_name="NewtonMeshGetVertexIndex")
    NewtonMeshGetVertexIndex :: proc(mesh : ^NewtonMesh, vertex : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetFirstPoint")
    NewtonMeshGetFirstPoint :: proc(mesh : ^NewtonMesh) -> rawptr ---

    @(link_name="NewtonMeshGetNextPoint")
    NewtonMeshGetNextPoint :: proc(mesh : ^NewtonMesh, point : rawptr) -> rawptr ---

    @(link_name="NewtonMeshGetPointIndex")
    NewtonMeshGetPointIndex :: proc(mesh : ^NewtonMesh, point : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetVertexIndexFromPoint")
    NewtonMeshGetVertexIndexFromPoint :: proc(mesh : ^NewtonMesh, point : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetFirstEdge")
    NewtonMeshGetFirstEdge :: proc(mesh : ^NewtonMesh) -> rawptr ---

    @(link_name="NewtonMeshGetNextEdge")
    NewtonMeshGetNextEdge :: proc(mesh : ^NewtonMesh, edge : rawptr) -> rawptr ---

    @(link_name="NewtonMeshGetEdgeIndices")
    NewtonMeshGetEdgeIndices :: proc(mesh : ^NewtonMesh, edge : rawptr, v0 : ^i32, v1 : ^i32) ---

    @(link_name="NewtonMeshGetFirstFace")
    NewtonMeshGetFirstFace :: proc(mesh : ^NewtonMesh) -> rawptr ---

    @(link_name="NewtonMeshGetNextFace")
    NewtonMeshGetNextFace :: proc(mesh : ^NewtonMesh, face : rawptr) -> rawptr ---

    @(link_name="NewtonMeshIsFaceOpen")
    NewtonMeshIsFaceOpen :: proc(mesh : ^NewtonMesh, face : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetFaceMaterial")
    NewtonMeshGetFaceMaterial :: proc(mesh : ^NewtonMesh, face : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetFaceIndexCount")
    NewtonMeshGetFaceIndexCount :: proc(mesh : ^NewtonMesh, face : rawptr) -> i32 ---

    @(link_name="NewtonMeshGetFaceIndices")
    NewtonMeshGetFaceIndices :: proc(mesh : ^NewtonMesh, face : rawptr, indices : ^i32) ---

    @(link_name="NewtonMeshGetFacePointIndices")
    NewtonMeshGetFacePointIndices :: proc(mesh : ^NewtonMesh, face : rawptr, indices : ^i32) ---

    @(link_name="NewtonMeshCalculateFaceNormal")
    NewtonMeshCalculateFaceNormal :: proc(mesh : ^NewtonMesh, face : rawptr, normal : ^f64) ---

    @(link_name="NewtonMeshSetFaceMaterial")
    NewtonMeshSetFaceMaterial :: proc(mesh : ^NewtonMesh, face : rawptr, matId : i32) ---

}
